force-app/main/default/objects/BusinessLicenseApplication/fields/Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Name__c</fullName>
    <label>Signature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>