force-app/main/default/objects/BusinessLicenseApplication/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <label>Social Security Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>