force-app/main/default/objects/BusinessLicenseApplication/fields/Submission_to_Jurisdiction_Consent__c.field-meta.xml
<CustomField>
    <fullName>Submission_to_Jurisdiction_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submission to Jurisdiction Consent</label>
    <type>Checkbox</type>
</CustomField>