force-app/main/default/objects/BusinessLicenseApplication/fields/UsesExternalFinancing__c.field-meta.xml
<CustomField>
    <fullName>UsesExternalFinancing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses External Financing</label>
    <type>Checkbox</type>
</CustomField>