force-app/main/default/objects/BusinessLicenseApplication/recordTypes/ABS_Application.recordType-meta.xml
<RecordType>
    <fullName>ABS_Application</fullName>
    <active>true</active>
    <label>ABS Application</label>
</RecordType>