force-app/main/default/objects/BusinessLicenseApplication/recordTypes/ABS_Authorized_Entity_Sub_Application.recordType-meta.xml
<RecordType>
    <fullName>ABS_Authorized_Entity_Sub_Application</fullName>
    <active>true</active>
    <label>ABS Authorized Entity Sub Application</label>
</RecordType>