force-app/main/default/objects/BusinessLicenseApplication/recordTypes/ABS_Authorized_Individual_Sub_Application.recordType-meta.xml
<RecordType>
    <fullName>ABS_Authorized_Individual_Sub_Application</fullName>
    <active>true</active>
    <label>ABS Authorized Individual Sub Application</label>
</RecordType>