force-app/main/default/objects/BusinessLicenseApplication/recordTypes/ABS_Compliance_Lawyer_Sub_Application.recordType-meta.xml
<RecordType>
    <fullName>ABS_Compliance_Lawyer_Sub_Application</fullName>
    <active>true</active>
    <label>ABS Compliance Lawyer Sub Application</label>
</RecordType>