force-app/main/default/objects/BusinessLicenseApplication/recordTypes/ABS_Designated_Principal_Sub_Application.recordType-meta.xml
<RecordType>
    <fullName>ABS_Designated_Principal_Sub_Application</fullName>
    <active>true</active>
    <label>ABS Designated Principal Sub Application</label>
</RecordType>