force-app/main/default/objects/BusinessLicenseApplication/recordTypes/ABS_Initial_Application.recordType-meta.xml
<RecordType>
    <fullName>ABS_Initial_Application</fullName>
    <active>true</active>
    <label>ABS Initial Application</label>
</RecordType>