force-app/main/default/objects/BusinessLicenseApplication/recordTypes/ABS_Renewal_Application.recordType-meta.xml
<RecordType>
    <fullName>ABS_Renewal_Application</fullName>
    <active>true</active>
    <label>ABS Renewal Application</label>
</RecordType>