force-app/main/default/objects/BusinessLicenseApplication/recordTypes/CRF_Application.recordType-meta.xml
<RecordType>
    <fullName>CRF_Application</fullName>
    <active>true</active>
    <label>Certified Reporting Firm Application</label>
</RecordType>