force-app/main/default/objects/BusinessLicenseApplication/recordTypes/LDB_Application.recordType-meta.xml
<RecordType>
    <fullName>LDB_Application</fullName>
    <active>true</active>
    <label>Legal Document Preparer Business Application</label>
</RecordType>