force-app/main/default/objects/BusinessLicenseApplication/validationRules/Owner_should_not_be_a_Queue.validationRule-meta.xml
<ValidationRule>
    <fullName>Owner_should_not_be_a_Queue</fullName>
    <active>true</active>
    <description>This validation rule fires if a user tries to make any changes to the record without taking the ownership.</description>
    <errorConditionFormula>AND(  $Permission.EnforceApplicationOwnerValidation, BEGINS(PRIORVALUE(OwnerId),&apos;00G&apos;),NOT(BEGINS(OwnerId ,&apos;005&apos;)))</errorConditionFormula>
    <errorMessage>Please take the ownership for the record before making the changes.</errorMessage>
</ValidationRule>