force-app/main/default/objects/BusinessLicenseApplication/validationRules/Reason_Required_On_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Required_On_Status_Change</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status) &amp;&amp; TEXT(Status) != &apos;Submitted&apos; &amp;&amp; TEXT(Status) != &apos;Draft&apos; &amp;&amp; TEXT(Status) != &apos;Payment Pending&apos; &amp;&amp;  ISBLANK( Status_Change_Reason__c )</errorConditionFormula>
    <errorDisplayField>Status_Change_Reason__c</errorDisplayField>
    <errorMessage>Reason for Status Change is required upon Approval of Application</errorMessage>
</ValidationRule>