force-app/main/default/objects/BusinessLicenseApplication/listViews/ABS_Specialist_Queue_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>ABS_Specialist_Queue_BusinessLicenseApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Investigator Queue</label>
    <queue>ABS_Specialist_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>