force-app/main/default/objects/BusinessLicenseApplication/listViews/All_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>All_BusinessLicenseApplication</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>LicenseType</columns>
    <columns>AppliedDate</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Business License Applications</label>
</ListView>