force-app/main/default/objects/BusinessLicenseApplication/listViews/All_LDP_Business_Applications.listView-meta.xml
<ListView>
    <fullName>All_LDP_Business_Applications</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>ApplicationType</columns>
    <columns>Status</columns>
    <columns>AppliedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>BusinessLicenseApplication.LDB_Application</value>
    </filters>
    <label>All LDP Business Applications</label>
</ListView>