force-app/main/default/objects/BusinessLicenseApplication/listViews/Certification_Specialist_BusinessLicenseApplication.listView-meta.xml
<ListView>
    <fullName>Certification_Specialist_BusinessLicenseApplication</fullName>
    <filterScope>Queue</filterScope>
    <label>Certification Specialist</label>
    <queue>Certification_Specialist</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>