force-app/main/default/objects/BusinessLicenseApplication/listViews/My_Business_License_Application.listView-meta.xml
<ListView>
    <fullName>My_Business_License_Application</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>AppliedDate</columns>
    <columns>LicenseType</columns>
    <columns>Status</columns>
    <filterScope>Mine</filterScope>
    <label>My Business License Application</label>
</ListView>